Add howto scene.

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./src/style.css" />
+        <title>Checkers</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./src/style.css">
-  <title>Checkers</title>
-</head>
+        <link
+            rel="preload"
+            as="font"
+            href="assets/fonts/8-bit-pusab_18.ttf"
+            type="font/ttf"
+            crossorigin
+        />
+        <link
+            rel="preload"
+            as="font"
+            href="assets/fonts/videotype_34.ttf"
+            type="font/ttf"
+            crossorigin
+        />
+        <link
+            rel="preload"
+            as="font"
+            href="assets/fonts/TECHKR_24.ttf"
+            type="font/ttf"
+            crossorigin
+        />
 
-<body>
-  <script type="module" src="/src/main.ts"></script>
-</body>
+        <style type="text/css">
+            @font-face {
+                font-family: "8-bit-pusab";
+                src: url("assets/fonts/8-bit-pusab_18.ttf");
+            }
 
+            @font-face {
+                font-family: "Videotype";
+                src: url("assets/fonts/videotype_34.ttf");
+            }
+
+            @font-face {
+                font-family: "TECHKR";
+                src: url("assets/fonts/TECHKR_24.ttf");
+            }
+        </style>
+    </head>
+
+    <body>
+        <script type="module" src="/src/main.ts"></script>
+    </body>
 </html>
