Add page footer.

--- a/src/index.html
+++ b/src/index.html
@@ -28,26 +28,12 @@
             type="font/ttf"
             crossorigin
         />
-
-        <style type="text/css">
-            @font-face {
-                font-family: "8-bit-pusab";
-                src: url("assets/fonts/8-bit-pusab_18.ttf");
-            }
-
-            @font-face {
-                font-family: "Videotype";
-                src: url("assets/fonts/videotype_34.ttf");
-            }
-
-            @font-face {
-                font-family: "TECHKR";
-                src: url("assets/fonts/TECHKR_24.ttf");
-            }
-        </style>
     </head>
 
     <body>
         <script type="module" src="/src/main.ts"></script>
     </body>
+    <footer>
+        <div class="copyright">&copy; All rights reserverd 2024 - Checkers v 0.9</div>
+    </footer>
 </html>
