Testing action workflows.

--- a/src/index.html
+++ b/src/index.html
@@ -10,28 +10,28 @@
         <link
             rel="preload"
             as="font"
-            href="assets/fonts/8-bit-pusab_18.ttf"
+            href="./assets/fonts/8-bit-pusab_18.ttf"
             type="font/ttf"
             crossorigin
         />
         <link
             rel="preload"
             as="font"
-            href="assets/fonts/videotype_34.ttf"
+            href="./assets/fonts/videotype_34.ttf"
             type="font/ttf"
             crossorigin
         />
         <link
             rel="preload"
             as="font"
-            href="assets/fonts/TECHKR_24.ttf"
+            href="./assets/fonts/TECHKR_24.ttf"
             type="font/ttf"
             crossorigin
         />
     </head>
 
     <body>
-        <script type="module" src="/src/main.ts"></script>
+        <script type="module" src="./src/main.ts"></script>
     </body>
     <footer>
         <div class="copyright">&copy; All rights reserverd 2024 - Checkers v 0.9</div>
