Testing action workflows.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="./vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./src/style.css" />
         <title>Checkers</title>
@@ -34,6 +34,8 @@
         <script type="module" src="./src/main.ts"></script>
     </body>
     <footer>
-        <div class="copyright">&copy; All rights reserverd 2024 - Checkers v 0.9</div>
+        <div class="copyright">
+            &copy; All rights reserverd 2024 - Checkers v 0.9
+        </div>
     </footer>
 </html>
