Testing action workflows.

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <link
             rel="preload"
             as="font"
-            href="./assets/fonts/TECHKR_24.ttf"
+            href="./assets/fonts/techkr_24.ttf"
             type="font/ttf"
             crossorigin
         />
