Update computer movement logic.

--- a/src/index.html
+++ b/src/index.html
@@ -12,21 +12,14 @@
             as="font"
             href="./assets/fonts/8-bit-pusab_18.ttf"
             type="font/ttf"
-            crossorigin
+            crossorigin="anonymous"
         />
         <link
             rel="preload"
             as="font"
             href="./assets/fonts/videotype_34.ttf"
             type="font/ttf"
-            crossorigin
-        />
-        <link
-            rel="preload"
-            as="font"
-            href="./assets/fonts/techkr_24.ttf"
-            type="font/ttf"
-            crossorigin
+            crossorigin="anonymous"
         />
     </head>
 
